// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle multiple visible items 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $1,000.00
  </h1>
</div>
`;

exports[`should handle single visible item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
  </h1>
</div>
`;
